# magnum_stuff

./: .gitattributes  README.md  genkey.sh  git-clone-bootstrap-project.sh  git-clone-sdk.sh
corrade/build-android-arm/: run.sh
corrade/build-android-arm64/: run.sh
emscripten/magnum/: run.sh
magnum-bootstrap/: .gitmodules  build.gradle
magnum-bootstrap/build-android-arm/: run.sh
magnum-bootstrap/build-android-arm64/: run.sh
magnum-bootstrap/build-emscripten-wasm/: run.sh
magnum-bootstrap/src/: CMakeLists.txt  MyApplication.cpp
magnum/build-android-arm/: run.sh
magnum/build-android-arm64/: run.sh
magnum/build-emscripten/: run.sh
magnum/build-emscripten-wasm/: run.sh
